# illum

./: .ackrc  .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  setup.cmake
gui/: CMakeLists.txt  GuiTypes.hpp  Illum.cpp  Illum.hpp  Tutorial.cpp  Tutorial.hpp  TutorialLevels.cpp  TutorialLevels.hpp  illum_main.cpp
gui/resources/: tutorial_levels.json  tutorial_levels_schema.json
levels/: Adjacents.hpp  BasicWallLayout.cpp  BasicWallLayout.hpp  BasicWallLayout2.cpp  BasicWallLayout2.hpp  CMakeLists.txt  LevelCreator.cpp  LevelCreator.hpp
levels/test/: BasicWallLayout2Test.cpp  BasicWallLayoutTest.cpp  CMakeLists.txt
model/: ASCIILevelCreator.hpp  Action.hpp  BasicBoard.cpp  BasicBoard.hpp  BoardModel.cpp  BoardModel.hpp  CMakeLists.txt  CellState.hpp  CellVisitorConcepts.hpp  Coord.cpp  Coord.hpp  Direction.cpp  Direction.hpp  Serialize.cpp  Serialize.hpp  SingleMove.cpp  SingleMove.hpp  StateChangeHandler.hpp  meta.hpp
model/test/: ASCIILevelCreator.hpp  ActionTest.cpp  BasicBoardTest.cpp  BoardModelTest.cpp  CMakeLists.txt  CellStateTest.cpp  CoordTest.cpp  DirectionTest.cpp  LevelCreator.hpp  SerializeTest.cpp  TestStateChangeHandler.hpp
olc/: CMakeLists.txt  olcButton.hpp  olcPixelGameEngine.h  olcRetroMenu.cpp  olcRetroMenu.hpp
play/: illum.data  illum.html  illum.js  illum.wasm
solver/: AnalysisBoard.cpp  AnalysisBoard.hpp  AnnotatedMove.cpp  AnnotatedMove.hpp  CMakeLists.txt  DecisionType.hpp  Hint.cpp  Hint.hpp  PositionBoard.cpp  PositionBoard.hpp  Solution.hpp  Solver.cpp  Solver.hpp  SpeculationContext.cpp  SpeculationContext.hpp  scope.hpp  trivial_moves.cpp  trivial_moves.hpp
solver/test/: AnalysisBoardTest.cpp  CMakeLists.txt  HintTest.cpp  PositionBoardTest.cpp  SolverSpeculationTest.cpp  SolverTest.cpp  TestUtils.hpp  TrivialMovesTest.cpp
solver/trivial/: trivial_moves.cpp  trivial_moves.hpp
utils/: CMakeLists.txt  DebugLog.hpp  EnumUtils.hpp  JsonValidate.hpp  jsonschema.cpp  jsonschema.hpp  picojson.h  picojson.hpp  scope.hpp
utils/test/: CMakeLists.txt  JsonValidateTest.cpp  JsonValidateTests.cpp
